@@ -1,3 +1,7 @@
+Mon Feb 28 17:26:01 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added a test for the query collapsing, along with a fix.
+
 Mon Feb 28 16:32:22 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Queries now combine identical terms into a single term
